# nina

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build  toolchain_mingw32_shared.cmake  toolchain_mingw32_static.cmake
.github/workflows/: build-win.yaml  create-build-container-win.yaml  create-build-container.yaml
container/: LinuxWinCross.docker  linux_win_cross.Dockerfile
src/: CMakeLists.txt
src/domain/: CMakeLists.txt  build  toolchain_gcc.cmake  toolchain_mingw32.cmake
src/domain/nina/: Address.h  Archiver.cpp  Archiver.h  Archiver.t.cpp  Bank.cpp  Bank.h  BottomField.cpp  BottomField.h  CMakeLists.txt  Date.cpp  Date.h  DefaultSettings.h  Exception.h  Exceptions.h  Invoice.h  Latex.cpp  Latex.h  LatexHelpers.h  Misc.h  Money.cpp  Money.h  PdfCreator.cpp  PdfCreator.h  PdfCreator.t.cpp  Position.cpp  Position.h  PositionContainer.cpp  PositionContainer.h  Receiver.h  Sender.h  Settings.h  Vat.cpp  Vat.h
src/domain/nina/detail/: SerializationHelper.h
src/domain/nina/test/: Fixture.h
src/domain/unitTest/: CMakeLists.txt  Makefile  UnitTest.cpp
src/ui/: CMakeLists.txt
src/ui/nina/: .gitignore  AccordionItem.qml  AddPosition.qml  AddPositionForm.ui.qml  CMakeLists.txt  ColumnHelper.js  DefaultTextArea.qml  InsertPositionDialog.qml  Invoice.qml  InvoiceForm.ui.qml  InvoicePositions.qml  InvoicePositionsForm.ui.qml  InvoiceSettings.qml  InvoiceSettingsBank.qml  InvoiceSettingsBankForm.ui.qml  InvoiceSettingsDate.qml  InvoiceSettingsDateForm.ui.qml  InvoiceSettingsFont.qml  InvoiceSettingsFontForm.ui.qml  InvoiceSettingsForm.ui.qml  InvoiceSettingsMisc.qml  InvoiceSettingsMiscForm.ui.qml  InvoiceSettingsReceiver.qml  InvoiceSettingsReceiverForm.ui.qml  InvoiceSettingsSave.qml  InvoiceSettingsSaveForm.ui.qml  InvoiceSettingsSender.qml  InvoiceSettingsSenderForm.ui.qml  InvoiceSettingsTexts.qml  InvoiceSettingsTextsForm.ui.qml  InvoiceSettingsVat.qml  InvoiceSettingsVatForm.ui.qml  InvoiceTest.qml  InvoiceTestForm.ui.qml  ModifyPositionDialog.qml  Position.qml  PositionDialogAdd.qml  PositionForm.ui.qml  PositionStandard.qml  PositionStandardForm.ui.qml  (+39 more)
src/ui/nina/detail/: conversion.h  macros.h
toolchain/: toolchain_mingw32_shared.cmake  toolchain_mingw32_static.cmake
